Make sure scrollbar trough is sharp

--- a/templates/TrueDark/gtk-3.0/gtk-widgets.css
+++ b/templates/TrueDark/gtk-3.0/gtk-widgets.css
@@ -278,6 +278,10 @@ scrollbar slider {
 	                color-stop(1.00, shade(@entryselbg-color, 1.0)));
 }
 
+scrollbar trough {
+	border-radius: 0px;
+}
+
 scrollbar.vertical slider {
 	background: -gtk-gradient(linear, 0 0, 1 0, color-stop(0.0, shade(@entryselbg-color, 1.0)),
 	                color-stop(0.50,shade(@entryselbg-color, 1.5)),
